tests/ui/retry_on_non_function.stderr
error: custom attribute panicked
  --> tests/ui/retry_on_non_function.rs:16:1
   |
16 | #[retry(BACKOFF_CONFIG, retry_if)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: failed to parse item under #[retry(...)] as function: Error("expected `fn`")
